z-index fix for form settings

--- a/agile-frontend/WebContent/misc/formbuilder/formbuilder-topmenu.css
+++ b/agile-frontend/WebContent/misc/formbuilder/formbuilder-topmenu.css
@@ -6,7 +6,7 @@
     box-shadow: 0 2px 2px rgba(50, 50, 50, 0.15);
     margin-bottom: 0px;
     border: 0px;
-    /*z-index: 9999;*/
+    z-index: 2001;
 }
 .navbar .navbar-brand {
     display: block;
